# amagi-todo

./: README.md  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/models/: __init__.py  completed_task.py  task.py
api/routers/: done.py  task.py
api/schemas/: task.py
api/services/: done.py  task.py
diagrams/: er.drawio  名称未設定ファイル.drawio
tests/: test_main.py
