[tool.poetry]
name = "amagi-todo"
version = "0.1.0"
description = ""
authors = ["Takashi Yamashina <takashi.yamashina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
